--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Paul Natsuo Kishimoto <kishimot@iiasa.ac.at> (@khaeru, IIASA)
 Daniel Huppmann <huppmann@iiasa.ac.at> (@danielhuppmann, IIASA)
-Franceso Lovat <lovat@iiasa.ac.at> (@francescolovat, IIASA)
+Francesco Lovat <lovat@iiasa.ac.at> (@francescolovat, IIASA)
