Add @phackstock to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Paul Natsuo Kishimoto <kishimot@iiasa.ac.at> (@khaeru, IIASA)
 Daniel Huppmann <huppmann@iiasa.ac.at> (@danielhuppmann, IIASA)
 Francesco Lovat <lovat@iiasa.ac.at> (@francescolovat, IIASA)
+Philip Hackstock <hackstock@iiasa.ac.at> (@phackstock, IIASA)
